--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "description": "This is blogapp",
   "keywords": [],
   "website": "",
-  "repository": "https://github.com/gotoumasahiro/diaryapp",
+  "repository": "https://github.com/Masha-goto/diaryapp",
   "env": {},
   "addons": [
     "heroku-postgresql:hobby-dev"
