--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "node-sass": "^9.0.0",
     "turbolinks": "^5.2.0"
   },
+	"scripts": {
+		"start": "react-scripts start --openssl-legacy-provider"
+	},
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^4.15.1"
