--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "diary_app",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@rails/actioncable": "^6.0.0",
     "@rails/actiontext": "^6.0.6-1",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.4",
+    "axios": "^1.6.7",
+    "jquery": "^3.7.1",
     "node-sass": "^9.0.0",
+    "rails-ujs": "^5.2.8-1",
     "trix": "^1.2.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
